# optimizers

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
optim/benchmarks/: bench.py  datasets.py  models.py
optim/optimizers/: README.md  adagrad.py  adam.py  muon.py  nesterov_sgd.py  rmsprop.py  sgd.py
src/optimizers/: README.md  adagrad.py  adam.py  sgd.py
