[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "optim"
version = "0.1.0"
authors = [
    { name = "David Ulloa", email = "dulloa6310@gmail.com" }
]
description = "A simple package for optimization algorithms"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
    "optax",
    "jax",
    "flax",
    "tensorflow-datasets",
    "tensorflow",
    "tqdm",
    "scikit-learn",
]

[project.urls]
Homepage = "https://github.com/davidulloa6310/optimizers"

[tool.setuptools.packages]
find = {}
